--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,10 @@
   		<artifactId>generic-source</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.4</version>
+  	</dependency>
   </dependencies>
 </project>
